pgrx-tests/tests/ui/elog/argument-order/ereport/omit_errcode.stderr
error: The alternative invocation style requires `errcode` argument to be specified after `loglevel`.
  --> tests/ui/elog/argument-order/ereport/omit_errcode.rs:7:5
   |
7  | /     ereport!(
8  | |         loglevel = PgLogLevel::LOG;
9  | |         message = "...";
10 | |     );
   | |_____^
   |
   = note: this error originates in the macro `ereport` (in Nightly builds, run with -Z macro-backtrace for more info)
